--- a/cloud_computing.html
+++ b/cloud_computing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Journey to the Cloud</title>
+    <title>The Journey to the Cloud: An Infographic</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -468,7 +468,128 @@
             </div>
         </section>
 
-        <!-- NEW SECTION: Cloud Engineer Roles -->
+        <!-- NEW SECTION: Service Comparison -->
+        <section id="service-comparison" class="fade-in-section mb-20">
+            <h2 class="text-3xl font-bold text-center mb-12 text-white">Comparing Core Services</h2>
+            <div class="grid md:grid-cols-3 gap-8">
+                <!-- AWS Column -->
+                <div>
+                    <h3 class="text-2xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-orange-500 mb-6">AWS</h3>
+                    <div class="space-y-4">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">S3 (Simple Storage Service)</p>
+                            <p class="text-sm text-gray-400">Object Storage</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">EC2 (Elastic Compute Cloud)</p>
+                            <p class="text-sm text-gray-400">Virtual Servers</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">ECS (Elastic Container Service)</p>
+                            <p class="text-sm text-gray-400">Containers</p>
+                        </div>
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Elastic Beanstalk</p>
+                            <p class="text-sm text-gray-400">Platform</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">DynamoDB</p>
+                            <p class="text-sm text-gray-400">NoSQL Database</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">RDS</p>
+                            <p class="text-sm text-gray-400">SQL Database</p>
+                        </div>
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Redshift</p>
+                            <p class="text-sm text-gray-400">Data Warehouse</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Lambda</p>
+                            <p class="text-sm text-gray-400">Serverless</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Azure Column -->
+                <div>
+                    <h3 class="text-2xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-sky-400 mb-6">Azure</h3>
+                    <div class="space-y-4">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Blob Storage</p>
+                            <p class="text-sm text-gray-400">Object Storage</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Virtual Machines (VM)</p>
+                            <p class="text-sm text-gray-400">Virtual Servers</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">AKS (Kubernetes Service)</p>
+                            <p class="text-sm text-gray-400">Containers</p>
+                        </div>
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">App Service</p>
+                            <p class="text-sm text-gray-400">Platform</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Cosmos DB</p>
+                            <p class="text-sm text-gray-400">NoSQL Database</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">SQL Database</p>
+                            <p class="text-sm text-gray-400">SQL Database</p>
+                        </div>
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Synapse Analytics</p>
+                            <p class="text-sm text-gray-400">Data Warehouse</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Azure Functions</p>
+                            <p class="text-sm text-gray-400">Serverless</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- GCP Column -->
+                <div>
+                    <h3 class="text-2xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-yellow-500 mb-6">GCP</h3>
+                    <div class="space-y-4">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Cloud Storage</p>
+                            <p class="text-sm text-gray-400">Object Storage</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Compute Engine</p>
+                            <p class="text-sm text-gray-400">Virtual Servers</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Kubernetes Engine (GKE)</p>
+                            <p class="text-sm text-gray-400">Containers</p>
+                        </div>
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">App Engine</p>
+                            <p class="text-sm text-gray-400">Platform</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Cloud Datastore / Firestore</p>
+                            <p class="text-sm text-gray-400">NoSQL Database</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Cloud SQL / AlloyDB</p>
+                            <p class="text-sm text-gray-400">SQL Database</p>
+                        </div>
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">BigQuery</p>
+                            <p class="text-sm text-gray-400">Data Warehouse</p>
+                        </div>
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                            <p class="font-bold text-white">Cloud Functions</p>
+                            <p class="text-sm text-gray-400">Serverless</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section 9: Cloud Engineer Roles -->
         <section id="cloud-engineers" class="fade-in-section">
             <h2 class="text-3xl font-bold text-center mb-4 text-white">Who is a Cloud Engineer?</h2>
             <p class="text-center text-gray-400 mb-6 max-w-3xl mx-auto">An IT professional responsible for the design, maintenance, monitoring, and deployment of cloud computing infrastructure.</p>
@@ -514,7 +635,7 @@
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-gray-400 text-center p-6 mt-12 border-t border-gray-700">
-        <p>&copy; 2025 The Cloud Journey. All Rights Reserved.</p>
+        <p>&copy; 2024 The Cloud Journey. All Rights Reserved.</p>
     </footer>
 
     <script>
@@ -535,6 +656,5 @@
             observer.observe(section);
         });
     </script>
-
 </body>
 </html>
