Refactor cloud_computing.html to center-align service descriptions in the service comparison section

--- a/cloud_computing.html
+++ b/cloud_computing.html
@@ -476,35 +476,35 @@
                 <div>
                     <h3 class="text-2xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-orange-500 mb-6">AWS</h3>
                     <div class="space-y-4">
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">S3 (Simple Storage Service)</p>
                             <p class="text-sm text-gray-400">Object Storage</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">EC2 (Elastic Compute Cloud)</p>
                             <p class="text-sm text-gray-400">Virtual Servers</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">ECS (Elastic Container Service)</p>
                             <p class="text-sm text-gray-400">Containers</p>
                         </div>
-                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Elastic Beanstalk</p>
                             <p class="text-sm text-gray-400">Platform</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">DynamoDB</p>
                             <p class="text-sm text-gray-400">NoSQL Database</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">RDS</p>
                             <p class="text-sm text-gray-400">SQL Database</p>
                         </div>
-                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Redshift</p>
                             <p class="text-sm text-gray-400">Data Warehouse</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Lambda</p>
                             <p class="text-sm text-gray-400">Serverless</p>
                         </div>
@@ -514,35 +514,35 @@
                 <div>
                     <h3 class="text-2xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-sky-400 mb-6">Azure</h3>
                     <div class="space-y-4">
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Blob Storage</p>
                             <p class="text-sm text-gray-400">Object Storage</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Virtual Machines (VM)</p>
                             <p class="text-sm text-gray-400">Virtual Servers</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">AKS (Kubernetes Service)</p>
                             <p class="text-sm text-gray-400">Containers</p>
                         </div>
-                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">App Service</p>
                             <p class="text-sm text-gray-400">Platform</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Cosmos DB</p>
                             <p class="text-sm text-gray-400">NoSQL Database</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">SQL Database</p>
                             <p class="text-sm text-gray-400">SQL Database</p>
                         </div>
-                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Synapse Analytics</p>
                             <p class="text-sm text-gray-400">Data Warehouse</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Azure Functions</p>
                             <p class="text-sm text-gray-400">Serverless</p>
                         </div>
@@ -552,35 +552,35 @@
                 <div>
                     <h3 class="text-2xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-yellow-500 mb-6">GCP</h3>
                     <div class="space-y-4">
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Cloud Storage</p>
                             <p class="text-sm text-gray-400">Object Storage</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Compute Engine</p>
                             <p class="text-sm text-gray-400">Virtual Servers</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Kubernetes Engine (GKE)</p>
                             <p class="text-sm text-gray-400">Containers</p>
                         </div>
-                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">App Engine</p>
                             <p class="text-sm text-gray-400">Platform</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Cloud Datastore / Firestore</p>
                             <p class="text-sm text-gray-400">NoSQL Database</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Cloud SQL / AlloyDB</p>
                             <p class="text-sm text-gray-400">SQL Database</p>
                         </div>
-                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                         <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">BigQuery</p>
                             <p class="text-sm text-gray-400">Data Warehouse</p>
                         </div>
-                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700">
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 text-center">
                             <p class="font-bold text-white">Cloud Functions</p>
                             <p class="text-sm text-gray-400">Serverless</p>
                         </div>
