--- a/aws.html
+++ b/aws.html
@@ -25,7 +25,6 @@
 </head>
 <body class="bg-gray-900 text-gray-300">
 
-    <!-- Header Section -->
     <header class="bg-gray-800/80 backdrop-blur-sm sticky top-0 z-50 border-b border-gray-700">
         <div class="container mx-auto px-6 py-4 flex items-center justify-between">
             <a href="index.html" class="text-gray-400 hover:text-white transition-colors">
@@ -33,9 +32,8 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
                 </svg>
             </a>
-            <h1 class="text-xl md:text-3xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-teal-300">Amazon Web Services (AWS)</h1>
-            <div class="w-6"></div> <!-- Spacer to keep title centered -->
-        </div>
+            <h1 class="text-xl md:text-3xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-orange-500">Amazon Web Services (AWS)</h1>
+            <div class="w-6"></div> </div>
     </header>
 
     <main class="container mx-auto px-6 py-12">
@@ -69,7 +67,7 @@
         </section>
 
         <section id="who-uses-aws" class="fade-in-section mb-20">
-            <h2 class="text-3xl font-bold text-center mb-12 text-white">Some Prominent AWS Customers</h2>
+            <h2 class="text-3xl font-bold text-center mb-12 text-white">Trusted by Industry Leaders</h2>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
                 <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
                     <h3 class="text-xl font-semibold text-white">Amazon</h3>
@@ -121,6 +119,26 @@
                  <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700">
                     <h3 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-blue-400 mb-4">Supports Large Organizations</h3>
                      <p class="text-gray-400">Trusted by enterprises for mission-critical workloads.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="shared-responsibility" class="fade-in-section mb-20">
+            <h2 class="text-3xl font-bold text-center mb-12 text-white">Shared Responsibility Model</h2>
+            <div class="grid md:grid-cols-2 gap-8">
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700">
+                    <h3 class="text-2xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-sky-400 to-cyan-400 mb-4">The House Analogy</h3>
+                    <ul class="list-disc list-inside space-y-2 text-gray-400">
+                        <li>When we build a house, it is the duty of the mason to install doors and locks properly.</li>
+                        <li>Similarly, as an owner, it is my duty to use that lock for security.</li>
+                    </ul>
+                </div>
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700">
+                    <h3 class="text-2xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-rose-400 to-red-500 mb-4">AWS vs. Customer</h3>
+                    <ul class="list-disc list-inside space-y-2 text-gray-400">
+                        <li><strong class="text-teal-300">AWS</strong> is responsible for the security <strong class="text-teal-300">OF</strong> the cloud (Compute, storage, DB, network software, etc.).</li>
+                        <li>The <strong class="text-yellow-300">Customer</strong> is responsible for security <strong class="text-yellow-300">IN</strong> the cloud (customer data, client-side data encryption).</li>
+                    </ul>
                 </div>
             </div>
         </section>
